# twins-recognition

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
docs/: QUICKSTART.md
src/twins_recognition/: __init__.py  classifier.py  cli.py  detector.py  embedding.py  gui.py  processor.py  webapp.py
src/twins_recognition.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/twins_recognition/templates/: index.html  result.html
tests/: conftest.py  test_classifier.py
